Lab3/2-Operator/parser.output
Terminals unused in grammar

    NEWLINE
    INVALID
    PERIOD


Grammar

    0 $accept: program $end

    1 program: statement
    2        | program SEMICOLON statement

    3 statement: LET IDENTIFIER ASSIGNMENT expression
    4          | PRINT expression

    5 expression: factor
    6           | expression PLUS expression
    7           | expression MINUS expression
    8           | expression TIMES expression
    9           | expression DIVIDE expression
   10           | expression EXPO expression

   11 factor: NUMBER
   12       | MINUS factor
   13       | LEFT_PARENTHESIS expression RIGHT_PARENTHESIS
   14       | IDENTIFIER


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    IDENTIFIER <character> (258) 3 14
    NUMBER (259) 11
    PLUS (260) 6
    MINUS (261) 7 12
    TIMES (262) 8
    DIVIDE (263) 9
    LEFT_PARENTHESIS (264) 13
    RIGHT_PARENTHESIS (265) 13
    EXPO (266) 10
    ASSIGNMENT (267) 3
    LET (268) 3
    PRINT (269) 4
    SEMICOLON (270) 2
    NEWLINE (271)
    INVALID (272)
    PERIOD (273)
    UMINUS (274)


Nonterminals, with rules where they appear

    $accept (20)
        on left: 0
    program (21)
        on left: 1 2
        on right: 0 2
    statement <num> (22)
        on left: 3 4
        on right: 1 2
    expression <num> (23)
        on left: 5 6 7 8 9 10
        on right: 3 4 6 7 8 9 10 13
    factor <num> (24)
        on left: 11 12 13 14
        on right: 5 12


State 0

    0 $accept: • program $end

    LET    shift, and go to state 1
    PRINT  shift, and go to state 2

    program    go to state 3
    statement  go to state 4


State 1

    3 statement: LET • IDENTIFIER ASSIGNMENT expression

    IDENTIFIER  shift, and go to state 5


State 2

    4 statement: PRINT • expression

    IDENTIFIER        shift, and go to state 6
    NUMBER            shift, and go to state 7
    MINUS             shift, and go to state 8
    LEFT_PARENTHESIS  shift, and go to state 9

    expression  go to state 10
    factor      go to state 11


State 3

    0 $accept: program • $end
    2 program: program • SEMICOLON statement

    $end       shift, and go to state 12
    SEMICOLON  shift, and go to state 13


State 4

    1 program: statement •

    $default  reduce using rule 1 (program)


State 5

    3 statement: LET IDENTIFIER • ASSIGNMENT expression

    ASSIGNMENT  shift, and go to state 14


State 6

   14 factor: IDENTIFIER •

    $default  reduce using rule 14 (factor)


State 7

   11 factor: NUMBER •

    $default  reduce using rule 11 (factor)


State 8

   12 factor: MINUS • factor

    IDENTIFIER        shift, and go to state 6
    NUMBER            shift, and go to state 7
    MINUS             shift, and go to state 8
    LEFT_PARENTHESIS  shift, and go to state 9

    factor  go to state 15


State 9

   13 factor: LEFT_PARENTHESIS • expression RIGHT_PARENTHESIS

    IDENTIFIER        shift, and go to state 6
    NUMBER            shift, and go to state 7
    MINUS             shift, and go to state 8
    LEFT_PARENTHESIS  shift, and go to state 9

    expression  go to state 16
    factor      go to state 11


State 10

    4 statement: PRINT expression •
    6 expression: expression • PLUS expression
    7           | expression • MINUS expression
    8           | expression • TIMES expression
    9           | expression • DIVIDE expression
   10           | expression • EXPO expression

    PLUS    shift, and go to state 17
    MINUS   shift, and go to state 18
    TIMES   shift, and go to state 19
    DIVIDE  shift, and go to state 20
    EXPO    shift, and go to state 21

    $default  reduce using rule 4 (statement)


State 11

    5 expression: factor •

    $default  reduce using rule 5 (expression)


State 12

    0 $accept: program $end •

    $default  accept


State 13

    2 program: program SEMICOLON • statement

    LET    shift, and go to state 1
    PRINT  shift, and go to state 2

    statement  go to state 22


State 14

    3 statement: LET IDENTIFIER ASSIGNMENT • expression

    IDENTIFIER        shift, and go to state 6
    NUMBER            shift, and go to state 7
    MINUS             shift, and go to state 8
    LEFT_PARENTHESIS  shift, and go to state 9

    expression  go to state 23
    factor      go to state 11


State 15

   12 factor: MINUS factor •

    $default  reduce using rule 12 (factor)


State 16

    6 expression: expression • PLUS expression
    7           | expression • MINUS expression
    8           | expression • TIMES expression
    9           | expression • DIVIDE expression
   10           | expression • EXPO expression
   13 factor: LEFT_PARENTHESIS expression • RIGHT_PARENTHESIS

    PLUS               shift, and go to state 17
    MINUS              shift, and go to state 18
    TIMES              shift, and go to state 19
    DIVIDE             shift, and go to state 20
    RIGHT_PARENTHESIS  shift, and go to state 24
    EXPO               shift, and go to state 21


State 17

    6 expression: expression PLUS • expression

    IDENTIFIER        shift, and go to state 6
    NUMBER            shift, and go to state 7
    MINUS             shift, and go to state 8
    LEFT_PARENTHESIS  shift, and go to state 9

    expression  go to state 25
    factor      go to state 11


State 18

    7 expression: expression MINUS • expression

    IDENTIFIER        shift, and go to state 6
    NUMBER            shift, and go to state 7
    MINUS             shift, and go to state 8
    LEFT_PARENTHESIS  shift, and go to state 9

    expression  go to state 26
    factor      go to state 11


State 19

    8 expression: expression TIMES • expression

    IDENTIFIER        shift, and go to state 6
    NUMBER            shift, and go to state 7
    MINUS             shift, and go to state 8
    LEFT_PARENTHESIS  shift, and go to state 9

    expression  go to state 27
    factor      go to state 11


State 20

    9 expression: expression DIVIDE • expression

    IDENTIFIER        shift, and go to state 6
    NUMBER            shift, and go to state 7
    MINUS             shift, and go to state 8
    LEFT_PARENTHESIS  shift, and go to state 9

    expression  go to state 28
    factor      go to state 11


State 21

   10 expression: expression EXPO • expression

    IDENTIFIER        shift, and go to state 6
    NUMBER            shift, and go to state 7
    MINUS             shift, and go to state 8
    LEFT_PARENTHESIS  shift, and go to state 9

    expression  go to state 29
    factor      go to state 11


State 22

    2 program: program SEMICOLON statement •

    $default  reduce using rule 2 (program)


State 23

    3 statement: LET IDENTIFIER ASSIGNMENT expression •
    6 expression: expression • PLUS expression
    7           | expression • MINUS expression
    8           | expression • TIMES expression
    9           | expression • DIVIDE expression
   10           | expression • EXPO expression

    PLUS    shift, and go to state 17
    MINUS   shift, and go to state 18
    TIMES   shift, and go to state 19
    DIVIDE  shift, and go to state 20
    EXPO    shift, and go to state 21

    $default  reduce using rule 3 (statement)


State 24

   13 factor: LEFT_PARENTHESIS expression RIGHT_PARENTHESIS •

    $default  reduce using rule 13 (factor)


State 25

    6 expression: expression • PLUS expression
    6           | expression PLUS expression •
    7           | expression • MINUS expression
    8           | expression • TIMES expression
    9           | expression • DIVIDE expression
   10           | expression • EXPO expression

    TIMES   shift, and go to state 19
    DIVIDE  shift, and go to state 20
    EXPO    shift, and go to state 21

    $default  reduce using rule 6 (expression)


State 26

    6 expression: expression • PLUS expression
    7           | expression • MINUS expression
    7           | expression MINUS expression •
    8           | expression • TIMES expression
    9           | expression • DIVIDE expression
   10           | expression • EXPO expression

    TIMES   shift, and go to state 19
    DIVIDE  shift, and go to state 20
    EXPO    shift, and go to state 21

    $default  reduce using rule 7 (expression)


State 27

    6 expression: expression • PLUS expression
    7           | expression • MINUS expression
    8           | expression • TIMES expression
    8           | expression TIMES expression •
    9           | expression • DIVIDE expression
   10           | expression • EXPO expression

    EXPO  shift, and go to state 21

    $default  reduce using rule 8 (expression)


State 28

    6 expression: expression • PLUS expression
    7           | expression • MINUS expression
    8           | expression • TIMES expression
    9           | expression • DIVIDE expression
    9           | expression DIVIDE expression •
   10           | expression • EXPO expression

    EXPO  shift, and go to state 21

    $default  reduce using rule 9 (expression)


State 29

    6 expression: expression • PLUS expression
    7           | expression • MINUS expression
    8           | expression • TIMES expression
    9           | expression • DIVIDE expression
   10           | expression • EXPO expression
   10           | expression EXPO expression •

    EXPO  shift, and go to state 21

    $default  reduce using rule 10 (expression)
